--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -98,3 +98,145 @@ header button svg {
 header button svg .fill {
   fill: #25b99a;
 }
+
+.container{
+  width: 100%;
+  float: left;
+  padding: 15px;
+  /*margin: 2% 3% 0% 3%;*/
+}
+
+ul.todo{
+  width:100%;
+  float: left;
+}
+
+ul.todo li{
+  width:100%;
+  min-height: 50px;
+  float: left;
+  font-size: 14px;
+  font-weight: 500;
+  color: #444;
+  line-height: 22px;
+
+  background: #fff;
+  border-radius: 5px;
+  position: relative;
+  box-shadow: 0px 1px 2px rgba(44,62,80, 0.1);
+  margin: 0 0 10px 0;
+  padding: 14px 100px 14px 14px;
+  word-break: break-word;
+}
+ul.todo li:last-of-type{
+  margin: 0;
+}
+
+ul.todo li .buttons{
+  width: 100px;
+  height: 50px;
+  position: absolute;
+  top: 0px;
+  right: 0px;
+}
+
+ul.todo li .buttons button{
+  width: 50px;
+  height: 50px;
+  float: left;
+  background: none;
+  position: relative;
+  border: 0px;
+  box-shadow: none;
+  outline: none;
+  cursor: pointer;
+
+  -webkit-appearance: none;
+  -moz-appearance: none;
+}
+
+ul.todo li .buttons button:last-of-type:before{
+  content: '';
+  width: 1px;
+  height: 30px;
+  position: absolute;
+  top: 10px;
+  left: 0;
+  background: #47ba5c;
+}
+
+ul.todo li .buttons button.remove svg{
+  width: 22px;
+  height: 22px;
+  position: absolute;
+  top:50%;
+  left:50%;
+  margin: -11px 0 0 -11px;
+}
+
+ul.todo li .buttons button.complete svg{
+  border-radius: 11px;
+  border: 1.5px solid #25b99a;
+  transition:background 0.2s ease;
+  width: 22px;
+  height: 22px;
+  position: absolute;
+  top:50%;
+  left:50%;
+  margin: -11px 0 0 -11px;
+}
+
+ul.todo#completed li .buttons button.complete svg{
+  background: #25b99a;
+  border: 0px;
+}
+
+ul.todo:not(#completed) li .buttons button.complete svg{
+  /*background: rgba(37,185,154,0.75);*/
+}
+
+ul.todo:not(#completed) li .buttons button.complete:hover svg .fill{
+  fill:#fff;
+}
+
+ul.todo#completed li .buttons button.complete svg .fill{
+  fill: #fff;
+}
+
+ul.todo li .buttons button svg .fill{
+  /*transition is like an animation*/
+  -webkit-transition: fill 0.7s ease;
+  -moz-transition: fill 0.7s ease;
+  -ms-transition: fill 0.7s ease;
+  -o-transition: fill 0.7s ease;
+  transition: fill 0.7s ease;
+
+}
+
+ul.todo li .buttons button.remove svg .fill{
+  fill: #c0cecb;
+}
+
+ul.todo li .buttons button.remove:hover svg .fill{
+  fill: #fb4353 ;
+}
+
+ul.todo li .buttons button.complete svg .fill{
+  fill: #25b99a;
+}
+
+
+
+/**/
+
+
+
+
+
+/*ul.todo li .buttons button.complete:hover svg .fill{*/
+  /*fill: #A4CAFB ;*/
+/*}*/
+
+
+
+
